--- a/friends_forlife/app/templates/app/house_registration.html
+++ b/friends_forlife/app/templates/app/house_registration.html
@@ -84,7 +84,7 @@ class DogHouse(models.Model):
 				                <li class="navBtnAdopt">
 				                    <a href="dogs_4_adoption.html">אמץ כלב</a>
 				                </li>
-				             	<li class="navBtnFoster">
+				             	<li class="is-active navBtnFoster">
 				                    <a href="house_registration.html">רישום לאומנה</a>
 				                </li>
 				             <li class="navBtnAbout">
