--- a/friends_forlife/app/templates/app/doghouse_index.html
+++ b/friends_forlife/app/templates/app/doghouse_index.html
@@ -77,7 +77,7 @@
 			            </div>
 					    <nav id="nav">
 				            <ul>
-				                <li class="is-active navBtnAdopt">
+				                <li class="navBtnAdopt">
 				                    <a href="dogs_4_adoption.html">אמץ כלב</a>
 				                </li>
 				             	<li class="navBtnFoster">
@@ -99,7 +99,7 @@
                                     <li class="navBtnDogIndex">
                                         <a href="dogs_index.html">ניהול כלבים</a>
                                     </li>
-                                    <li class="navBtnDogHouseIndex">
+                                    <li class="is-active navBtnDogHouseIndex">
                                         <a href="doghouse_index.html">ניהול אומנה</a></a>
                                     </li>
                                 {% endif %}
