--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -35,7 +35,7 @@
 						</div>
 						<nav id="nav">
 							<ul>
-								<li class="is-active navBtnAdopt">
+								<li class="navBtnAdopt">
 									<img src="../../static/img/icons/adoption_icon.jpg">
 									<a href="dogs_4_adoption.html">אמץ כלב</a>
 									<hr>
