--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -176,7 +176,7 @@
 											<p class="name">
 												{{ dog.name }}
 											</p>
-											<div class="col-4">
+											<div class="col-4 generalDetails">
 												<p>
 													<span>מין: </span> {{ dog.gender }}
 												</p>
