Fixed Nav for chip_info and chip_search

--- a/friends_forlife/app/templates/app/chip_search.html
+++ b/friends_forlife/app/templates/app/chip_search.html
@@ -43,7 +43,7 @@
                             {% endif %}			            </div>
 					    <nav id="nav">
 				            <ul>
-				                <li class="is-active navBtnAdopt">
+				                <li class="navBtnAdopt">
 				                    <a href="dogs_4_adoption.html">אמץ כלב</a>
 				                </li>
 				             	<li class="navBtnFoster">
@@ -52,8 +52,8 @@
 				             <!--<li class="navBtnAbout">
 				                    <a href="#">אודות</>
 				              </li>-->
-    				             <li class="navBtnGallery">
-				                    <a href="#">גלריה</a></a>
+    				             <li class="is-active navBtnGallery">
+				                    <a href="chip_search">חיפוש שבב</a></a>
 				                </li>
 				             <!--<li class="navBtnContact">
 				                    <a href="#">צור קשר</a>
