--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -60,7 +60,7 @@
 				              </li>-->
 				             <li class="navBtnAbout">
 									<img src="../../static/img/icons/logo_icon.png">
-									<a href="">על העמותה</a>
+									<a href="chip_search">חיפוש שבב</a>
 									<hr>
 				                </li>
 				             <!--<li class="navBtnContact">
