--- a/friends_forlife/app/templates/app/chip_info.html
+++ b/friends_forlife/app/templates/app/chip_info.html
@@ -53,8 +53,8 @@
 				             <!--<li class="navBtnAbout">
 				                    <a href="#">אודות</>
 				              </li>-->
-    				             <li class="navBtnGallery">
-				                    <a href="#">גלריה</a></a>
+    				             <li class="is-active navBtnGallery">
+				                    <a href="chip_search">חיפוש שבב</a></a>
 				                </li>
 				             <!--<li class="navBtnContact">
 				                    <a href="#">צור קשר</a>
