--- a/friends_forlife/app/templates/app/dog_update.html
+++ b/friends_forlife/app/templates/app/dog_update.html
@@ -32,7 +32,7 @@
 				                    <a href="#">אודות</>
 				              </li>-->
     				             <li class="navBtnGallery">
-				                    <a href="#">גלריה</a></a>
+				                    <a href="chip_search">חיפוש שבב</a></a>
 				                </li>
 				             <!--<li class="navBtnContact">
 				                    <a href="#">צור קשר</a>
