--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -19,19 +19,29 @@
 						<a href="index.html"  id="logo"></a><!--Logo-->
 						<a class="nav-btn" id="nav-open-btn" href="#nav">Book Navigation</a>
 						<div id="contact">
-							<div id="loginBannerBeforeClick">
-								<button id="btnClick" class="based">
-									כניסה למערכת
-								</button>
-							</div>
-
-							<div id="loginBannerAfterClick" style="display:none;">
-								<form name="login" action="index_submit" method="get">
-									<input type="submit" value="כניסה">
-									<input type="password" name="password" placeholder="סיסמא" required>
-									<input type="text" name="usermail" placeholder="שם משתמש" required>
-								</form>
-							</div>
+							{% if request.user.is_authenticated %}
+                                <div id="loginBannerBeforeClick">
+                                    <button id="btnClick" class="based">מחובר למערכת</button>
+                                </div>
+                                <div id="loginBannerAfterClick" style="display:none;">
+                                    <form name="logout" action="logout_endpoint" method="post">
+                                                <input type="submit" value="התנתק">
+                                        <label> מחובר כ:</label><br>
+                                        <label class="text"> {{ user.username }}</label>
+                                    </form>
+                                </div>
+                            {% else %}
+                                <div id="loginBannerBeforeClick">
+                                    <button id="btnClick" class="based">כניסה למערכת</button>
+                                </div>
+                                <div id="loginBannerAfterClick" style="display:none;">
+                                    <form name="login" action="login_endpoint" method="post">
+                                                <input type="submit" value="כניסה">
+                                                <input type="password" name="password" placeholder="סיסמא" required>
+                                                <input type="text" name="usermail" placeholder="שם משתמש" required>
+                                    </form>
+                                </div>
+                            {% endif %}
 						</div>
 						<nav id="nav">
 							<ul>
@@ -47,7 +57,7 @@
 								</li>
 								<li class="navBtnAbout">
 									<img src="../../static/img/icons/logo_icon.png">
-									<a href="">על העמותה</a>
+									<a href="chip_search">חיפוש שבב</a>
 									<hr>
 								</li>
 								<li class="navBtnDonate">
