--- a/friends_forlife/app/templates/app/house_registration.html
+++ b/friends_forlife/app/templates/app/house_registration.html
@@ -88,7 +88,7 @@ class DogHouse(models.Model):
 				                    <a href="house_registration.html">רישום לאומנה</a>
 				                </li>
 				             <li class="navBtnAbout">
-				                    <a href="#">על העמותה</a>
+				                    <a href="chip_search">חיפוש שבב</a>
 				                </li>
 				                </li>
 				                <li class="navBtnDonate">
