--- a/friends_forlife/app/templates/app/chip_info.html
+++ b/friends_forlife/app/templates/app/chip_info.html
@@ -78,7 +78,7 @@
 				<main id="main">
 					<div class="block">
 						<div class="mainTop"></div>
-						<div class="mainContent">
+						<div class="mainContent mainContentChipSearch">
 				    		<h1>תוצאות החיפוש</h1>
                                 {% if dog_chip_info.name != "None" %}
                                     <img src="../../static/img/dogs_img/no-img.jpg" class="picture col-4" style="width:100px; height:70px; margin-top:70px" >
